--- a/Portfolio.css
+++ b/Portfolio.css
@@ -105,6 +105,7 @@ span {
     width: 35vw;
     border: 10px solid var(--main-color);
     border-radius: 60%;
+        margin-right: 75px;
    
 }
 
@@ -164,7 +165,7 @@ span {
     width: 35vw;
     border: 10px solid var(--main-color);
     border-radius: 50%;
- 
+ margin-left: 50px;
 
 }
 
